Bug 368179 - Freehand brush tool does not support touch screen painting
Summary: Freehand brush tool does not support touch screen painting
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 3.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 368708 373665 377712 379482 379731 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-09-03 08:53 UTC by Kate
Modified: 2017-06-29 09:07 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kate 2016-09-03 08:53:48 UTC
so when I draw I normally just use my hand cause I got a touch screen because I don't have enough money for a drawing pad. I really want to keep krita but I cant if I cant draw on the touch screen. it would really make me happy if it would get fixed as soon as possible. 

Reproducible: Always

Steps to Reproduce:
1.look back at the old version and find where you were able to use the touch screen  
2. once you find how to use the touch screen to draw put it on 3.0
3. relax and enjoy life

Actual Results:  
I don't know how to fix it to use the touch screen

Expected Results:  
what the software should had is having it to let some of the user to user the touch screen


until is is fix I  will wait to use krita
Comment 1 Halla Rempt 2016-09-15 12:52:33 UTC
*** Bug 368708 has been marked as a duplicate of this bug. ***
Comment 2 Halla Rempt 2016-12-22 15:36:53 UTC
*** Bug 373665 has been marked as a duplicate of this bug. ***
Comment 3 Halla Rempt 2017-03-17 07:22:50 UTC
*** Bug 377712 has been marked as a duplicate of this bug. ***
Comment 4 Halla Rempt 2017-05-03 15:29:28 UTC
*** Bug 379482 has been marked as a duplicate of this bug. ***
Comment 5 wolthera 2017-05-23 16:22:08 UTC
*** Bug 379731 has been marked as a duplicate of this bug. ***
Comment 6 wolthera 2017-05-23 16:22:41 UTC
I think this ought to be confirmed by now.
Comment 7 Halla Rempt 2017-06-28 16:12:24 UTC
Git commit 3ef0e2d70169bee76f572dd225775ecc14e71f24 by Boudewijn Rempt.
Committed on 28/06/2017 at 16:08.
Pushed by rempt into branch 'rempt/touch-painting'.

Make it possible to enable finger-painting

This was theoretically possible through a config setting, but since
the setting was only used in case the tool claimed to be a text
tool _and_ the freehand tool had the setting hardcoded to false, it
never worked.
Related: bug 364386

M  +51   -49   libs/ui/input/kis_input_manager.cpp
M  +2    -3    libs/ui/input/kis_input_manager.h
M  +16   -22   libs/ui/input/kis_input_manager_p.cpp
M  +3    -2    libs/ui/input/kis_input_manager_p.h
M  +4    -3    libs/ui/input/kis_shortcut_matcher.cpp
M  +1    -1    libs/ui/tool/kis_tool_freehand.cc

https://commits.kde.org/krita/3ef0e2d70169bee76f572dd225775ecc14e71f24
Comment 8 Halla Rempt 2017-06-29 09:07:26 UTC
Git commit a1863a80f0f3903f495bfff67d368497584179fb by Boudewijn Rempt.
Committed on 29/06/2017 at 08:44.
Pushed by rempt into branch 'rempt/touch-paint-4'.

Make it possible to enable finger-painting

This was theoretically possible through a config setting, but since
the setting was only used in case the tool claimed to be a text
tool _and_ the freehand tool had the setting hardcoded to false, it
never worked.
Related: bug 364386

M  +0    -3    libs/flake/KoToolProxy.cpp
M  +50   -48   libs/ui/input/kis_input_manager.cpp
M  +0    -2    libs/ui/input/kis_input_manager.h
M  +17   -23   libs/ui/input/kis_input_manager_p.cpp
M  +3    -2    libs/ui/input/kis_input_manager_p.h
M  +4    -3    libs/ui/input/kis_shortcut_matcher.cpp
M  +1    -1    libs/ui/tool/kis_tool_freehand.cc

https://commits.kde.org/krita/a1863a80f0f3903f495bfff67d368497584179fb