Make it possible to enable finger-painting

This was theoretically possible through a config setting, but since
the setting was only used in case the tool claimed to be a text
tool _and_ the freehand tool had the setting hardcoded to false, it
never worked.

BUG:368179
BUG:364386