libs/ui/input/kis_shortcut_matcher.cpp
@@ -278,13 +278,14 @@ bool KisShortcutMatcher::touchUpdateEvent( QTouchEvent* event )
 {
     bool retval = false;
 
-    if( m_d->touchShortcut && !m_d->touchShortcut->match( event ) ) {
+    if (m_d->touchShortcut && !m_d->touchShortcut->match( event ) ) {
         retval = tryEndTouchShortcut( event );
     }
 
-    if( !m_d->touchShortcut ) {
+    if (!m_d->touchShortcut ) {
         retval = tryRunTouchShortcut( event );
-    } else {
+    }
+    else {
         m_d->touchShortcut->action()->inputEvent( event );
         retval = true;
     }
